# water_tracker

./: .gitignore  Cargo.toml  pirson.db
scripts/: main.py
src/: main.rs
web/: index.css  index.html  index.js
