[package]
name = "water_tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
chrono = "0.4.38"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "chrono",
    "tls-native-tls",
] }
tokio = { version = "1.39.2", features = ["full"] }
